--- a/package.json
+++ b/package.json
@@ -6,17 +6,38 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "gen:watch": "dotenv -c development -- graphql-codegen --watch",
+    "gen": "dotenv -c development -- graphql-codegen"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.9",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@graphql-codegen/cli": "^5.0.0",
+    "@graphql-codegen/fragment-matcher": "^5.0.0",
+    "@graphql-codegen/typed-document-node": "^5.0.1",
+    "@graphql-codegen/typescript": "^4.0.1",
+    "@graphql-codegen/typescript-operations": "^4.0.1",
+    "@graphql-codegen/typescript-react-apollo": "^4.1.0",
+    "@hookform/resolvers": "^3.3.3",
+    "@mui/material": "^5.15.4",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.0",
+    "dotenv": "^16.3.1",
+    "graphql": "^16.8.1",
     "lucide-react": "^0.299.0",
     "next": "14.0.3",
     "react": "^18",
+    "react-apollo-network-status": "^5.2.1",
     "react-dom": "^18",
-    "tailwind-merge": "^2.1.0",
-    "tailwindcss-animate": "^1.0.7"
+    "react-hook-form": "^7.49.2",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
+    "universal-cookie": "^7.0.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -26,6 +47,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "postcss": "^8.4.32",
+    "prettier": "3.1.1",
     "tailwindcss": "^3.3.6",
     "typescript": "^5"
   }
