--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"@graphql-codegen/typescript-react-apollo": "^4.1.0",
 		"@hookform/resolvers": "^3.3.3",
 		"@mui/material": "^5.15.4",
+		"@radix-ui/react-avatar": "^1.0.4",
 		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-separator": "^1.0.3",
 		"@radix-ui/react-slot": "^1.0.2",
