--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"@hookform/resolvers": "^3.3.3",
 		"@mui/material": "^5.15.4",
 		"@radix-ui/react-avatar": "^1.0.4",
+		"@radix-ui/react-dropdown-menu": "^2.0.6",
 		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-separator": "^1.0.3",
 		"@radix-ui/react-slot": "^1.0.2",
@@ -51,6 +52,7 @@
 		"eslint": "^8.56.0",
 		"graphql": "^16.8.1",
 		"js-cookie": "^3.0.5",
+		"lodash": "^4.17.21",
 		"lucide-react": "^0.299.0",
 		"next": "14.0.3",
 		"pre-commit": "^1.2.2",
@@ -66,6 +68,7 @@
 	"devDependencies": {
 		"@biomejs/biome": "1.5.3",
 		"@types/js-cookie": "^3.0.6",
+		"@types/lodash": "^4.14.202",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
