--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 		"gen:watch": "dotenv -c development -- graphql-codegen --watch",
 		"gen": "dotenv -c development -- graphql-codegen",
 		"biome:check": "biome check ./src",
+		"biome:format": "biome format ./src --write",
+		"biome:lint": "biome lint ./src",
 		"postinstall": "husky install",
 		"prepare": "husky"
 	},
@@ -43,11 +45,15 @@
 		"@radix-ui/react-avatar": "^1.0.4",
 		"@radix-ui/react-dropdown-menu": "^2.0.6",
 		"@radix-ui/react-label": "^2.0.2",
+		"@radix-ui/react-popover": "^1.0.7",
+		"@radix-ui/react-select": "^2.0.0",
 		"@radix-ui/react-separator": "^1.0.3",
 		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-toast": "^1.1.5",
 		"@radix-ui/react-tooltip": "^1.0.7",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
+		"date-fns": "^3.3.1",
 		"dotenv": "^16.3.1",
 		"eslint": "^8.56.0",
 		"graphql": "^16.8.1",
@@ -58,6 +64,7 @@
 		"pre-commit": "^1.2.2",
 		"react": "^18",
 		"react-apollo-network-status": "^5.2.1",
+		"react-day-picker": "^8.10.0",
 		"react-dom": "^18",
 		"react-hook-form": "^7.49.2",
 		"tailwind-merge": "^2.2.0",
