--- a/package.json
+++ b/package.json
@@ -35,11 +35,10 @@
 		"@apollo/client": "^3.8.9",
 		"@emotion/react": "^11.11.3",
 		"@emotion/styled": "^11.11.0",
-		"@graphql-codegen/cli": "^5.0.0",
 		"@graphql-codegen/fragment-matcher": "^5.0.0",
-		"@graphql-codegen/typed-document-node": "^5.0.1",
-		"@graphql-codegen/typescript": "^4.0.1",
-		"@graphql-codegen/typescript-operations": "^4.0.1",
+		"@graphql-codegen/typed-document-node": "^5.0.6",
+		"@graphql-codegen/typescript": "^4.0.6",
+		"@graphql-codegen/typescript-operations": "^4.2.0",
 		"@graphql-codegen/typescript-react-apollo": "^4.1.0",
 		"@hookform/resolvers": "^3.3.3",
 		"@mui/material": "^5.15.4",
@@ -56,7 +55,7 @@
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
 		"date-fns": "^3.3.1",
-		"dotenv": "^16.3.1",
+		"dotenv-cli": "^7.4.1",
 		"eslint": "^8.56.0",
 		"graphql": "^16.8.1",
 		"js-cookie": "^3.0.5",
@@ -77,6 +76,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.5.3",
+		"@graphql-codegen/cli": "^5.0.2",
 		"@types/js-cookie": "^3.0.6",
 		"@types/lodash": "^4.14.202",
 		"@types/node": "^20",
@@ -84,6 +84,7 @@
 		"@types/react-dom": "^18",
 		"@types/uuid": "^9.0.8",
 		"autoprefixer": "^10.4.16",
+		"dotenv": "^16.4.5",
 		"eslint-config-next": "14.0.3",
 		"husky": "^9.0.6",
 		"lint-staged": "^15.2.0",
